vlib/v/checker/tests/array_init_element_option_mismatch_err.out
vlib/v/checker/tests/array_init_element_option_mismatch_err.vv:8:11: error: cannot use `?string` as `string`, it must be unwrapped first
    6 | fn main() {
    7 |     str := ?string(none)
    8 |     _ = ['', str]
      |              ~~~
    9 | 
   10 |     foo := Foo{}
vlib/v/checker/tests/array_init_element_option_mismatch_err.vv:11:18: error: cannot use `?string` as `string`, it must be unwrapped first
    9 | 
   10 |     foo := Foo{}
   11 |     _ = [foo.a, foo.b]
      |                     ^
   12 |     _ = [foo.b, foo.a]
   13 | }
vlib/v/checker/tests/array_init_element_option_mismatch_err.vv:12:18: error: cannot use `string` as `?string`
   10 |     foo := Foo{}
   11 |     _ = [foo.a, foo.b]
   12 |     _ = [foo.b, foo.a]
      |                     ^
   13 | }
