vlib/v/checker/tests/array_init_element_option_mismatch_err.vv
struct Foo {
	a string
	b ?string
}

fn main() {
	str := ?string(none)
	_ = ['', str]

	foo := Foo{}
	_ = [foo.a, foo.b]
	_ = [foo.b, foo.a]
}
